--- a/JwtTest/appsettings.json
+++ b/JwtTest/appsettings.json
@@ -11,5 +11,10 @@
         "Default": "Warning"
       }
     }
+  },
+  "Jwt": {
+    "Issuer": "VladKolodka",
+    "Audience": "mywebsite",
+    "Key": "123456789123456789"
   }
 }
